# OH-MNN

./: BUILD.gn  MNN.gni
benchmark/: BUILD.gn
tools/cpp/: BUILD.gn
