# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd. 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/version.gni")

declare_args() {
  MNN_USE_CPP11 = true
}

declare_args() {
  MNN_OPENMP = false
  MNN_HIDDEN = false
  MNN_SEP_BUILD=true
  MNN_ENABLE_COVERAGE=false
  MNN_USE_SPARSE_COMPUTE=true
  MNN_SUPPORT_BF16=false
  MNN_SSE_USE_FP16_INSTEAD=false
  MNN_USE_SSE=false
}

