# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd. 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# MNN build

import("//build/ohos.gni")
import("//third_party/mnn/MNN.gni")

ohos_executable("benchmark.out") {
  sources = [
    "//third_party/mnn/benchmark/benchmark.cpp",
    "//third_party/mnn//tools/cpp/revertMNNModel.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("benchmarkExprModels.out") {
  sources = [
    "//third_party/mnn/benchmark/benchmarkExprModels.cpp",
    "//third_party/mnn/benchmark/exprModels/GoogLeNetExpr.cpp",
    "//third_party/mnn/benchmark/exprModels/MobileNetExpr.cpp",
    "//third_party/mnn/benchmark/exprModels/ResNetExpr.cpp",
    "//third_party/mnn/benchmark/exprModels/ShuffleNetExpr.cpp",
    "//third_party/mnn/benchmark/exprModels/SqueezeNetExpr.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

