# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd. 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# MNN build

import("//build/ohos.gni")
import("//third_party/mnn/MNN.gni")

ohos_executable("MNNV2Basic.out") {
  sources = [
    "//third_party/mnn/tools/cpp/MNNV2Basic.cpp",
    "//third_party/mnn/tools/cpp/revertMNNModel.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("mobilenetTest.out") {
  sources = [
    "//third_party/mnn/tools/cpp/mobilenetTest.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("backendTest.out") {
  sources = [
    "//third_party/mnn/tools/cpp/backendTest.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("testModel.out") {
  sources = [
    "//third_party/mnn/tools/cpp/testModel.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ]  
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}


ohos_executable("testModelWithDescrisbe.out") {
  sources = [
    "//third_party/mnn/tools/cpp/testModelWithDescrisbe.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("getPerformance.out") {
  sources = [
    "//third_party/mnn/tools/cpp/getPerformance.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("checkInvalidValue.out") {
  sources = [
    "//third_party/mnn/tools/cpp/checkInvalidValue.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("timeProfile.out") {
  sources = [
    "//third_party/mnn/tools/cpp/timeProfile.cpp",
    "//third_party/mnn/tools/cpp/revertMNNModel.cpp",
    "//third_party/mnn/tools/cpp/Profiler.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ]  
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("checkDir.out") {
  sources = [
    "//third_party/mnn/tools/cpp/checkDir.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("checkFile.out") {
  sources = [
    "//third_party/mnn/tools/cpp/checkFile.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("winogradExample.out") {
  sources = [
    "//third_party/mnn/tools/cpp/winogradExample.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("winogradGenerateGLSL.out") {
  sources = [
    "//third_party/mnn/tools/cpp/winogradGenerateGLSL.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}

ohos_executable("winogradGenerateCL.out") {
  sources = [
    "//third_party/mnn/tools/cpp/winogradGenerateCL.cpp",
  ]
  configs = [ "//third_party/mnn:mnn_config" ]
  deps = ["//third_party/mnn:ohosmnn",
         "//third_party/mnn:MNN_Express",
  ] 
  #下面两项，请根据实际进行修改并取消注释
  #part_name = "inputmethod_native"
  #subsystem_name = "miscservices"
}
